# axumatic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.rs  config.toml  create_test_pg.sh  main.rs  route_handlers.rs  test-config.toml
.sqlx/: query-00f70678564017e31e004aa304e777666c1a4985cbce412acd876c127c9970aa.json  query-0618f5dbe5618598204fea0d9c4b0daa63c2e963025de71fa3da6bb8139d9b63.json  query-1159eb94a26402675e3e32a86784f0b01ce8d957635014e48554e7cde787ecbc.json  query-12204967aa5a2df82abb36a43394cdff27a13a1fbfa46cc4ec8f34e1e90f8f57.json  query-12db831c3a762880174e537b39a815883770c67a23d724db45a512dae0726d1f.json  query-1a9977d03f6b4f3a13904c409eb94c0149c9633e79baff297a3a457c7b00f6ca.json  query-1d95389c8cd3f77cba74925bfa0c24c00657d203c85cd3998c3439319edd6796.json  query-354beadbafedcf01d29b177616be932aa9f0f3bdf21a5ce528b1e436f3620e79.json  query-3df4e3be2f85b73b8d2243fadc22d041ab8434e0b2b2f269260f8435ae1055f7.json  query-43136f2e72c78bc1c112cc89ff45c4469000f7961c706235f9cb723c7eee7a71.json  query-46b1650866709037ee6a9e1288aa7f7a7f4c00defa4c0e19e10e9e867eabfc99.json  query-46cfb27a4001dabb8d4d0aaddf6d87cc6345440f09281e3e8cdda043a3ad2ba1.json  query-50382309c84b73338fb9752dc0ecac8b7cabbe9b08a0c51b56b20663867b5e2b.json  query-56cc5264208afd381824f6093623b6d2ad466629178b9f1cbf80229240fc6414.json  query-6f5de7528aaa80eb53fd132f09ca46e9fb58c252c057a4270fd5c67dbad41910.json  query-7970ce4bd92501a3c627b1a46809416055193a03b6bf8a175daa4104f7b944f9.json  query-8d1c6861147984f07c810bfd4fec079c87027238ac3166e52538294e149fbe41.json  (+13 more)
assets/: index.html  login.html  (+1 more)
(+35 files in other folders)
