[package]
name = "axumatic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
lettre = { version = "0.11.9", features = ["smtp-transport"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
