[package]
name = "axumatic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
axum = "0.7.7"
chrono = "0.4.38"
http = "1.1.0"
lettre = { version = "0.11.9", features = ["smtp-transport"] }
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["fs", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
